# nonogram-solver

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  board.hpp  externc.cpp  main.cpp  solver.cpp  solver.hpp
